bk_ida/gccida/g3/e53toe
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e53toe/src/real.c:3641:12: error: expected expression
*( _OWORD *)v34 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e53toe/src/real.c:3641:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v34 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e53toe/src/real.c:3762:12: error: expected expression
*( _OWORD *)&v34[2] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e53toe/src/real.c:3762:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v34[2] = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e53toe/src/obj/real.o] Error 1
